--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Volantes</title>
-  <base href="/">
+  <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   
 
 </head>
